// proto/rencrypt.proto

syntax = "proto3";
package rencrypt;

service RencryptOperator {
	rpc GenerateKeyPair(Empty) returns (EncodedKeyPair);
	rpc Encrypt(EncryptRequest) returns (EncryptReply);
	rpc GenerateTransformKey(GenerateTransformKeyRequest) returns (EncodedPayload);
	rpc Transform(TransformRequest) returns (EncodedPayload);
	rpc Decrypt(DecryptRequest) returns (EncodedPayload);
}

message Empty {}

message EncodedKeyPair {
	string pubkey_base64 = 1;
	string privkey_base64 = 10;
}

message GenerateTransformKeyRequest {
	string to_pubkey_base64 = 1;
	string from_privkey_base64 = 10;
}

message EncryptRequest {
	string data = 1;
	string pubkey_base64 = 2;

	bool is_data_base64 = 10;
}

message EncryptReply {
	string cipher_base64 = 1;
	float length = 10;
}

message TransformRequest {
	string cipher_base64 = 1;
	string transformkey_base64 = 2;
}

message EncodedPayload {
	string payload_base64 = 1;
}

message DecryptRequest {
	string cipher_base64 = 1;
	string privkey_base64 = 2;
	float length = 3;
}
